--- a/landing1/index.html
+++ b/landing1/index.html
@@ -83,7 +83,7 @@
 									If you are reading now the lines of this remarkable story, it can be said with certainty that you are living in Europe and have been fall under job cuts, due to the new COVID-19 epidemic. We want assure you from the beginning that your gender, education and work experience have nothing in common with this story. You should read the incredible story of a simple girl (NAME SURNAME), who was able to find a source of income in such difficult period.
 								</p>
 								<p>
-									Our heroine (NAME), only 27 years, she recently worked as ‘white collar’ in a small travel company and dreamed about wealthy life. She graduated college in her tiny town and tried her best to build her career. She applied maximum of her capabilities and her career grew. However, her agency began to have problems in January and in February a real crisis appeared. The travel agency did not have an opportunity to offer tours, due to the prevailed situation and the company began the crisis phase. Since the girl’s main profit consisted of a percentage of the tours sale, her earnings approached zero. In this situation, she began to search for methods of earnings on the internet. Thanks to her perseverance and looking, the girl managed to find <a href="http://coronabillionaire.com/" target="blank">(WEB SITE NAME)</a>. Since the end of February, the girl was able to make more than EUR 350 per day on her own. In this article the heroine decided to share her story and help others, who suffered the same fate because of the pandemic, to repeat her path.
+									Our heroine (NAME), only 27 years, she recently worked as ‘white collar’ in a small travel company and dreamed about wealthy life. She graduated college in her tiny town and tried her best to build her career. She applied maximum of her capabilities and her career grew. However, her agency began to have problems in January and in February a real crisis appeared. The travel agency did not have an opportunity to offer tours, due to the prevailed situation and the company began the crisis phase. Since the girl’s main profit consisted of a percentage of the tours sale, her earnings approached zero. In this situation, she began to search for methods of earnings on the internet. Thanks to her perseverance and looking, the girl managed to find <a href="http://coronabillionaire.com/" target="blank">Corona Millionaire</a>. Since the end of February, the girl was able to make more than EUR 350 per day on her own. In this article the heroine decided to share her story and help others, who suffered the same fate because of the pandemic, to repeat her path.
 								</p>
 								<p>
 									After reading this interesting story, you will gain confidence in your powers and tomorrow’s day. You will be able to take a small step from minimal investment and begin to receive a small profit daily, which will provide you during this hard time. 
@@ -162,8 +162,8 @@
 
 								</p>
 								<p>
-									My savings amounted to about EUR 3,000. I got a lot of free time that I spent on social networks (Facebook, Instagram) and accidentally got to the site <a href="http://coronabillionaire.com/" target="_blank">(SITE NAME)</a>. The site was very informative and it contained detailed instructions on how passively you can make money on the Internet. I was very interested in the scheme described there, it was very simple even for me, although I do not like mathematics from school and everything else related to economics
-I had a huge interest in this topic and I began to look for various additional information. I found many interesting groups on social networks in which people shared their experiences and earning schemes, published strategies. From all the information I collected, I realized that trading crypto on the site <a href="http://coronabillionaire.com/" target="_blank">(SITE NAME)</a> is one of the easiest and cheapest methods available to me, and it is also a very good platform for novice traders, which I consider myself to be.
+									My savings amounted to about EUR 3,000. I got a lot of free time that I spent on social networks (Facebook, Instagram) and accidentally got to the site <a href="http://coronabillionaire.com/" target="_blank">Corona Millionaire</a>. The site was very informative and it contained detailed instructions on how passively you can make money on the Internet. I was very interested in the scheme described there, it was very simple even for me, although I do not like mathematics from school and everything else related to economics
+I had a huge interest in this topic and I began to look for various additional information. I found many interesting groups on social networks in which people shared their experiences and earning schemes, published strategies. From all the information I collected, I realized that trading crypto on the site <a href="http://coronabillionaire.com/" target="_blank">Corona Millionaire</a> is one of the easiest and cheapest methods available to me, and it is also a very good platform for novice traders, which I consider myself to be.
 								</p>
 								<div class="results">
 									<a href="http://coronabillionaire.com/" target="_blank"><img src="img/image6.png" width="100%"></a>
@@ -188,7 +188,7 @@ I had a huge interest in this topic and I began to look for various additional i
 
 								</h2>
 								<p>
-									(NAME) was able to easily earn her first money on the Internet during the epidemic and continue to save on her childhood dreams - travel and discover the world. All this became possible for her thanks to <a href="http://coronabillionaire.com/" target="_blank">(SITE NAME)</a>
+									(NAME) was able to easily earn her first money on the Internet during the epidemic and continue to save on her childhood dreams - travel and discover the world. All this became possible for her thanks to <a href="http://coronabillionaire.com/" target="_blank">Corona Millionaire</a>
 								</p>
 								<p>
 									Financiers from New York: “Thanks to this opportunity, hundreds and thousands of people can earn during the crisis, and here the opportunity to make money is much higher than playing the lottery. Clients began to apply us much more for advice, because they are rapidly getting rich and want to increase their fortune. A rather interesting fact is that many new clients before that worked in simple positions, similar to: office plankton, manager and waiter. Now, many people have begun to earn much more than the CEOs of large companies in London or Berlin. ” 
@@ -203,7 +203,7 @@ I had a huge interest in this topic and I began to look for various additional i
 
 								</p>
 								<p>
-									I learned that trading on <a href="http://coronabillionaire.com/" target="blank">(SITE NAME)</a> works by buying when prices rise and selling when prices fall. This is called a “quick sale” when you just opened a position and the profit comes into your own hands.
+									I learned that trading on <a href="http://coronabillionaire.com/" target="blank">Corona Millionaire</a> works by buying when prices rise and selling when prices fall. This is called a “quick sale” when you just opened a position and the profit comes into your own hands.
 
 								</p>
 								<p>
@@ -275,7 +275,7 @@ I had a huge interest in this topic and I began to look for various additional i
 									SUMMARY
 								</h2>
 								<p>
-									As a user, you may begin to doubt efficiency a bit <a href="http://coronabillionaire.com/" target="blank">(WEB SITE NAME)</a>, but you should give yourself a chance to try and then verify the reality of the results. The stories of people are real and speak for themselves. You should not even be afraid to lose your money, because the site provides an opportunity to return fully your initial deposit.
+									As a user, you may begin to doubt efficiency a bit <a href="http://coronabillionaire.com/" target="blank">Corona Millionaire</a>, but you should give yourself a chance to try and then verify the reality of the results. The stories of people are real and speak for themselves. You should not even be afraid to lose your money, because the site provides an opportunity to return fully your initial deposit.
 								</p>
 								<p>
 									The media will not report about this site and method now, because this is one of the secrets of Wall Street. World financial leaders do not want ordinary citizens to have the opportunity to get rich so quickly, because wealth is power and freedom. This is something that world leaders do not want to share with others.
@@ -308,7 +308,7 @@ I had a huge interest in this topic and I began to look for various additional i
 								<h2>
 									<a href="http://coronabillionaire.com/" target="_blank">
 										<u>
-											Click here to check of you can still register an account on <a href="http://coronabillionaire.com/" target="blank">(WEB SITE NAME)</a>
+											Click here to check of you can still register an account on <a href="http://coronabillionaire.com/" target="blank">Corona Millionaire</a>
 										</u>
 									</a>
 								</h2>
